@@ -21,6 +21,7 @@ Version 2.14.0
 
 - Updated lexers:
 
+  * Alloy: update for Alloy 6 (#1963)
   * C family (C, C++ and many others): fix an issue where a chunk would
     be wrongly recognized as a function definition due to braces in
     comments (#2210)
